--- a/webApi/public/css/styles.css
+++ b/webApi/public/css/styles.css
@@ -53,6 +53,14 @@ label img {
   transform-origin: 50% 50%;
 }
 
+#remove-image {
+  height: 35px;
+  width: 35px;
+  transition-duration: 0.2s;
+  transform-origin: 50% 50%;
+
+}
+
 label button {
   transition-duration: 0.2s;
   transform-origin: 50% 50%;
